@@ -7,7 +7,7 @@ An HexChat plugin that pastes files line by line on IRC.
 
 
 __module_name__ = 'HexPaste'
-__module_version__ = '2014.08.30'
+__module_version__ = '2014.08.31'
 __module_description__ = 'Paste files line by line on IRC.'
 
 
@@ -46,7 +46,7 @@ def parse_speed(string):
     try:
         speed = int(string)
 
-        if not speed > 0:
+        if speed <= 0:
             raise HexPasteError('HexPaste: speed must be positive.')
 
         return speed
@@ -55,9 +55,9 @@ def parse_speed(string):
         raise HexPasteError('HexPaste: invalid speed: {}.'.format(string))
 
 
-def paste_line(context, line):
+def paste_line(hexchat_context, line):
     """
-    Say 'line' in a given HexChat 'context'.
+    Say 'line' in a given hexchat context.
     Empty lines are converted to a single space.
     """
     line = line.rstrip()
@@ -65,7 +65,7 @@ def paste_line(context, line):
     if len(line) == 0:
         line = ' '
 
-    context.command('say {}'.format(line))
+    hexchat_context.command('say {}'.format(line))
 
 
 # Data representation:
@@ -73,26 +73,46 @@ def paste_line(context, line):
 class MessageContext(object):
     """
     Represents a context (network/server/channel) where messages can be pasted.
-
-    Since hexchat.get_context() returns an unhashable object, this class
+    Since 'hexchat.get_context()' returns an unhashable object, this class
     serves the same purpose. Like the former, MessageContext() returns
     a representation of the current active context.
-
-    Two instances of 'MessageContext' are considered equal when the network
-    server and channel are equal.
     """
     def __init__(self):
+        self.id = hexchat.get_prefs('id')
+
         self.network = hexchat.get_info('network')
         self.server = hexchat.get_info('server')
         self.channel = hexchat.get_info('channel')
 
+    def find_hexchat_context(self):
+        """
+        Try to find this context (e.g. like hexchat.find_context()).
+        Returns None if unavailable.
+        """
+        for channel in hexchat.get_list('channels'):
+            if channel.id == self.id:
+                context = channel.context
+
+                if ((context.get_info('network') == self.network)
+                    and (context.get_info('server') == self.server)
+                    and (context.get_info('channel') == self.channel)):
+                    return context
+
+        return None
+
     def __eq__(self, other):
-        return ((self.network == other.network)
+        """
+        Two instances are considered equal when the id, the network,
+        the server and the channel are equal.
+        """
+        return (isinstance(other, MessageContext)
+            and (self.id == other.id)
+            and (self.network == other.network)
             and (self.server == other.server)
             and (self.channel == other.channel))
 
     def __hash__(self):
-        return hash((self.network, self.server, self.channel))
+        return hash((self.id, self.network, self.server, self.channel))
 
     def __str__(self):
         return '{} - {}'.format(self.channel, self.network)
@@ -106,7 +126,7 @@ class Message(object):
         # parent HexPaste instance that created this message:
         self.parent = parent
 
-        # target context where we will be pasting:
+        # MessageContext where we will be pasting:
         self.context = context
 
         # message data:
@@ -114,7 +134,7 @@ class Message(object):
         self.line_number = 0
         self.total_lines = len(lines)
 
-        # timer and pasting state:
+        # timer and pasting state (either 'paste' or 'stop'):
         self.speed = speed
         self.hook = None
         self.state = 'stop'
@@ -125,8 +145,8 @@ class Message(object):
         return self.total_lines - self.line_number
 
     def paste(self):
-        """ Start pasting lines in this message context. """
-        if self.state != 'stop':
+        """ Continue pasting lines in this message context. """
+        if self.state == 'paste':
             raise HexPasteError('HexPaste: already pasting to: {}.'.format(self.context))
 
         self.hook = hexchat.hook_timer(self.speed, self.tick)
@@ -134,20 +154,12 @@ class Message(object):
 
     def stop(self):
         """ Stop pasting lines in this message context. """
-        if self.state != 'paste':
+        if self.state == 'stop':
             raise HexPasteError('HexPaste: not pasting to: {}.'.format(self.context))
 
         hexchat.unhook(self.hook)
         self.hook = None
         self.state = 'stop'
-
-    def resume(self):
-        """ Resume pasting lines in this message context. """
-        if self.state != 'stop':
-            raise HexPasteError('HexPaste: no pending lines to: {}.'.format(self.context))
-
-        self.hook = hexchat.hook_timer(self.speed, self.tick)
-        self.state = 'paste'
 
     def maybe_stop(self):
         """ Like 'Message.stop()' but does not raise errors when not pasting. """
@@ -157,23 +169,23 @@ class Message(object):
     def tick(self, userdata):
         """
         Continue pasting while active and pending lines.
-        Auto-stops when the context is unreachable.
+        Auto-stop when the context is unreachable.
         """
-        context = hexchat.find_context(self.context.server, self.context.channel)
-
-        # no context, auto-pause:
-        if context is None:
-            hexchat.prnt('HexPaste: stopping, target unreachable: {}.'.format(self.context))
-            self.stop()
-            return 0
-
         # no lines, notice parent and stop the timer:
         if self.remaining_lines == 0:
             self.parent.remove_target(self.context)
             return 0
 
+        hexchat_context = self.context.find_hexchat_context()
+
+        # no context, auto-stop:
+        if hexchat_context is None:
+            hexchat.prnt('HexPaste: stopping, target unreachable: {}.'.format(self.context))
+            self.stop()
+            return 0
+
         line = self.lines[self.line_number]
-        paste_line(context, line)
+        paste_line(hexchat_context, line)
         self.line_number += 1
         return 1
 
@@ -196,13 +208,13 @@ class HexPaste(object):
             raise HexPasteError('HexPaste: internal error, removing unknown context?!')
 
         del self.targets[context]
-        hexchat.prnt('HexPaste: no more lines, finished pasting to: {}.'.format(context))
+        hexchat.prnt('HexPaste: finished pasting to: {}.'.format(context))
 
     def paste(self, lines, speed):
         """ Start pasting lines to the current context. """
         context = MessageContext()
 
-        # there is a message, stop and replace with the new message:
+        # there is a message, stop and replace it with the new message:
         if context in self.targets:
             old_message = self.targets[context]
             old_message.maybe_stop()
@@ -229,20 +241,26 @@ class HexPaste(object):
             .format(message.remaining_lines, context))
 
     def resume(self):
-        """ Resume pasting lines to the current target. """
+        """ Resume pasting lines to the current context. """
         context = MessageContext()
 
         if not context in self.targets:
             raise HexPasteError('HexPaste: not pasting to: {}.'.format(context))
 
         message = self.targets[context]
-        message.resume()
+        message.paste()
 
         hexchat.prnt('HexPaste: resumed pasting ({} pending lines) to: {}.'
             .format(message.remaining_lines, context))
 
 
-# Commands:
+# Globals:
+
+paster = HexPaste()
+hexpaste_commands = collections.OrderedDict()
+
+
+# Add commands:
 
 def hexpaste_file_cb(word, word_eol, userdata):
     """
@@ -255,7 +273,7 @@ def hexpaste_file_cb(word, word_eol, userdata):
 
     filepath = word[2]
 
-    if len(word) == 4:
+    if len(word) >= 4:
         speed = parse_speed(word[3])
     else:
         speed = 2500
@@ -293,11 +311,6 @@ def hexpaste_help_cb(word, word_eol, userdata):
         hexchat.prnt(command.__doc__.rstrip())
 
 
-# Globals:
-
-paster = HexPaste()
-
-hexpaste_commands = collections.OrderedDict()
 hexpaste_commands['file'] = hexpaste_file_cb
 hexpaste_commands['stop'] = hexpaste_stop_cb
 hexpaste_commands['resume'] = hexpaste_resume_cb
@@ -310,13 +323,11 @@ def hexpaste_cb(word, word_eol, userdata):
     """ Parse parameters and dispatch to particular commands. """
     try:
         if len(word) < 2:
-            raise HexPasteError(
-                'HexPaste: no parameters. See "/hexpaste help" for documentation.')
+            raise HexPasteError('HexPaste: no parameters. See "/hexpaste help" for documentation.')
 
         command = word[1]
         if not command in hexpaste_commands:
-            raise HexPasteError(
-                'HexPaste: unknown command. See "/hexpaste help" for documentation.')
+            raise HexPasteError('HexPaste: unknown command. See "/hexpaste help" for documentation.')
 
         hexpaste_commands[command](word, word_eol, userdata)
 
@@ -337,5 +348,5 @@ hexchat.hook_command('hexpaste', hexpaste_cb)
 
 # Done:
 
-hexchat.prnt('{} {} loaded.'.format(__module_name__, __module_version__))
+hexchat.prnt('{} {} loaded'.format(__module_name__, __module_version__))
 
