@@ -1,6 +1,11 @@
 
 CHANGELOG
 
+* 2014/08/31:
+
+    - The unique server id is now also used as an identifier for messages.
+      Two pastes in the same network/server/channel are effectively different.
+
 * 2014/08/30:
 
     - XChat is no longer supported, only HexChat is.
